
cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_C_STANDARD 99)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(PRJ_NAME mybst)
project(${PRJ_NAME} VERSION 0.1.0)
set(PRJ_NAME_EXE ${PRJ_NAME})
add_executable(${PRJ_NAME_EXE} main.c bst.h bst.c)
target_link_libraries(${PRJ_NAME_EXE} m)
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall")
